--- a/src/app/employee-sub-system/view-employee-profile/view-employee-profile.component.html
+++ b/src/app/employee-sub-system/view-employee-profile/view-employee-profile.component.html
@@ -21,8 +21,8 @@
         <form [formGroup]="employeeDetailForm">
           <div class="row form-group">
             <div class="col-lg-6 col-md-4 col-sm-8 col-12">
-              <label>Initials:</label>
-              <input type="text" class="form-control" formControlName="initials" [readonly]="editDetail" placeholder="initials">
+              <label>Name:</label>
+              <input type="text" class="form-control" formControlName="Name" [readonly]="editDetail" placeholder="initials">
             </div>
           </div>
           <div class="row form-group">
