--- a/src/app/product-sub-system/add-product-size/add-product-size.component.html
+++ b/src/app/product-sub-system/add-product-size/add-product-size.component.html
@@ -24,7 +24,7 @@
                                                                           Please Enter product size.
                                                                         </span>
                                                                         <span *ngIf="productSizeForm.get('productSizeDescription')?.errors?.maxlength || productSizeForm.get('productSizeDescription')?.errors?.minlength">
-                                                                          The product size must be greater than 10 and less than 50 characters.
+                                                                          The product size must be at least 3 characters.
                                                                         </span>
                                                                       </span>
                                     </div>
