--- a/src/app/product-sub-system/add-product-type/add-product-type.component.html
+++ b/src/app/product-sub-system/add-product-type/add-product-type.component.html
@@ -27,7 +27,7 @@
                                                                           Please enter product type.
                                                                         </span>
                                                                         <span *ngIf="productTypeForm.get('productTypeName')?.errors?.maxlength || productTypeForm.get('productTypeName')?.errors?.minlength">
-                                                                          The product type must be greater than 10 and less than 50 characters.
+                                                                          The product type must be at least 3 characters.
                                                                         </span>
                                                                       </span>
                                     </div>
