--- a/src/app/report-sub-system/half-yearly-employee-report/half-yearly-employee-report.component.html
+++ b/src/app/report-sub-system/half-yearly-employee-report/half-yearly-employee-report.component.html
@@ -17,7 +17,7 @@
                 <table class="table">
                   <thead  style="background-color: rgb(103, 186, 241);">
                     <tr>
-                      <th scope="col">Initials</th>
+                      <th scope="col">Name</th>
                       <th scope="col">Surname</th>
                       <th scope="col">Id Number</th>
                       <th scope="col">Email</th>
