--- a/src/app/Admin/Location/location-detail/location-detail.component.html
+++ b/src/app/Admin/Location/location-detail/location-detail.component.html
@@ -1,7 +1,7 @@
 
 <div class="card">
     <div  class="card-header text-center">
-      <h3>Location Detail</h3>
+      <h3>Location Details</h3>
     </div>
     <div class="card-body">
       <div class="row">
