--- a/src/app/Admin/Role/roles-detail/roles-detail.component.html
+++ b/src/app/Admin/Role/roles-detail/roles-detail.component.html
@@ -8,7 +8,7 @@
             <div class="col-2">
             </div>
           <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
-              <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/admin/add-role/0'" >Add</button>
+              <!-- <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/admin/add-role/0'" >Add</button> -->
           </div>
           <div class="col-2">
           </div>
@@ -33,7 +33,7 @@
                           <tr *ngFor="let role of rolesData">
                             <td scope="row">{{role.roleName}}</td>
                             <td scope="row">
-                              <button class="btn btn-outline-primary" (click)="editRole(role)">Update</button>
+                              <!-- <button class="btn btn-outline-primary" (click)="editRole(role)">Update</button> -->
                               <button class="btn btn-outline-primary" (click)="manageRoleFeatures(role)">Role Features</button>
                             </td>
                           </tr>
