--- a/src/app/order-sub-system/checkout/checkout/checkout.component.html
+++ b/src/app/order-sub-system/checkout/checkout/checkout.component.html
@@ -122,7 +122,7 @@
     <div class=" row mt-5" *ngIf="showPaymentMethod">
       <div class="card">
           <div class="card-header ">
-            <h5>Payment Type Type</h5>
+            <h5>Payment Type</h5>
           </div>
           <div class="card-body">
             <form [formGroup]="paymentTypeForm">
