--- a/src/app/report-sub-system/management-report/management-report.component.html
+++ b/src/app/report-sub-system/management-report/management-report.component.html
@@ -1,6 +1,6 @@
 <div class="card" >
     <div class="card-header text-center">
-      <h3>Six Month  Report </h3>
+      <h3>6 Month Sales Average Report </h3>
     </div>
     <div class="card-body" id="report">
       <div class="row mt-5 mb-5">
@@ -11,7 +11,7 @@
             
             <div class="card mt-3 mb-3" *ngFor="let month of productData">
                 <div class="card-header text-center ">
-                    <h3>{{month?.monthName}} Transactional  Report </h3>
+                    <h3>{{month?.monthName}}'s Average Sales</h3>
                   </div>
                 <div class="card-body">
                   <div class="row">
