--- a/src/app/report-sub-system/monthly-employee-register-report/monthly-employee-register-report.component.html
+++ b/src/app/report-sub-system/monthly-employee-register-report/monthly-employee-register-report.component.html
@@ -26,7 +26,7 @@
                 <table class="table">
                   <thead  style="background-color: rgb(103, 186, 241);">
                     <tr>
-                      <th scope="col">Initials</th>
+                      <th scope="col">Name</th>
                       <th scope="col">Surname</th>
                       <th scope="col">Team</th>
                       <th scope="col">Days Attended</th>
