--- a/src/app/report-sub-system/monthly-transactional-report/monthly-transactional-report.component.html
+++ b/src/app/report-sub-system/monthly-transactional-report/monthly-transactional-report.component.html
@@ -1,6 +1,6 @@
 <div class="card" >
     <div class="card-header text-center">
-      <h3>Monthly Transactional  Report </h3>
+      <h3>Monthly Product Sales Report </h3>
     </div>
     <div class="card-body">
       <div class="row">
@@ -27,7 +27,7 @@
                   <thead  style="background-color: rgb(103, 186, 241);">
                     <tr>
                       <th scope="col">Product Name</th>
-                      <th scope="col">Quantity Sold</th>
+                      <th scope="col">Revenue Brought In (R)</th>
                     </tr>
                   </thead>
                   <tbody>
