--- a/src/app/user-sub-system/client-sign-up/client-sign-up.component.html
+++ b/src/app/user-sub-system/client-sign-up/client-sign-up.component.html
@@ -43,8 +43,8 @@
             <form [formGroup]="clientDetailForm">
                   <div class="row form-group">
                 <div class="col-lg-6 col-md-4 col-sm-8 col-12">
-                  <label>Initials:</label>
-                  <input type="text" class="form-control" placeholder="initials" formControlName="initials">
+                  <label>Name:</label>
+                  <input type="text" class="form-control" placeholder="Name" formControlName="initials">
                 </div>
               </div>
               <div class="row form-group">
